--- a/NotesManager/index.html
+++ b/NotesManager/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="container">
-        <h1>Note Manager :3</h1>
-        <button id="add-note">Add note</button>
-        <ul id="notes-list"></ul>
-    </div>
+    <h1>Notes list</h1>
+    <form>
+        <input type="text" id="add-note-input">
+        <button id="add-note-button">Add note</button>
+    </form>
+    <ul id="notes-list"></ul>
     <script src="app.js"></script>
 </body>
 </html>
